--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="styles/typography.css">
 </head>
 <body>
-  <header>
+  <header class="header">
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
